opprydding av erorrhåndtering